force-app/main/default/objects/Sperm_Sample__c/fields/Straw_Size__c.field-meta.xml
<CustomField>
    <fullName>Straw_Size__c</fullName>
    <label>Straw Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.3mL</fullName>
                <label>0.3</label>
            </value>
            <value>
                <fullName>0.5mL</fullName>
                <label>0.5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>