force-app/main/default/objects/Sperm_Sample__c/fields/Straw_Size_Number__c.field-meta.xml
<CustomField>
    <fullName>Straw_Size_Number__c</fullName>
    <formula>IF(TEXT(Straw_Size__c) = &quot;0.3mL&quot;,0.3,
IF(TEXT(Straw_Size__c) =&quot;0.5mL&quot;,0.5,
null
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Straw Size Number</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>