force-app/main/default/objects/Sperm_Sample__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>