force-app/main/default/objects/Sperm_Sample__c/fields/TMC_for_Insemination__c.field-meta.xml
<CustomField>
    <fullName>TMC_for_Insemination__c</fullName>
    <formula>(Volume__c*Sperm_Concentration__c*Total_Motility__c/100)</formula>
    <label>TMC for Insemination</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>