force-app/main/default/objects/Sperm_Sample__c/fields/Total_Motile_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Motile_Count__c</fullName>
    <formula>Volume__c * Sperm_Concentration__c * Total_Motility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Motile Count</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>