force-app/main/default/objects/Sperm_Sample__c/fields/Total_Motile_Count_by_Straw__c.field-meta.xml
<CustomField>
    <fullName>Total_Motile_Count_by_Straw__c</fullName>
    <formula>Concentration__c *  Post_Thaw_Total_Motility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Motile Count by Straw</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>