force-app/main/default/objects/Sperm_Sample__c/fields/Total_Motility__c.field-meta.xml
<CustomField>
    <fullName>Total_Motility__c</fullName>
    <formula>(Progressive_Motility__c  +  Non_Progressive__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Motility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>