force-app/main/default/objects/Sperm_Sample__c/fields/Type_of_Sample__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Sample__c</fullName>
    <label>Type of Sample</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ejaculate</fullName>
            </value>
            <value>
                <fullName>Retrograde</fullName>
            </value>
            <value>
                <fullName>Aspirate</fullName>
            </value>
            <value>
                <fullName>Open Biopsy</fullName>
            </value>
            <value>
                <fullName>From Another Clinic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>