force-app/main/default/objects/Sperm_Sample__c/fields/User_Generating__c.field-meta.xml
<CustomField>
    <fullName>User_Generating__c</fullName>
    <formula>$User.FirstName&amp;&quot; &quot;&amp;$User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Generating</label>
    <type>Text</type>
</CustomField>