force-app/main/default/objects/Sperm_Sample__c/fields/User_s_System_Date__c.field-meta.xml
<CustomField>
    <fullName>User_s_System_Date__c</fullName>
    <description>Field with the purpose of pre-populating AirSlate reports with the date generated, in Australian format.</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User&apos;s System Date</label>
    <type>Date</type>
</CustomField>