force-app/main/default/objects/Sperm_Sample__c/fields/Viscosity__c.field-meta.xml
<CustomField>
    <fullName>Viscosity__c</fullName>
    <label>Viscosity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Increased (2)</fullName>
            </value>
            <value>
                <fullName>Very Increased (3)</fullName>
            </value>
            <value>
                <fullName>Reduced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>