force-app/main/default/objects/Sperm_Sample__c/fields/Vitaly_live__c.field-meta.xml
<CustomField>
    <fullName>Vitaly_live__c</fullName>
    <label>Vitality (live)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>