force-app/main/default/objects/Sperm_Sample__c/fields/Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Yes_No__c</fullName>
    <label>Yes No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>