force-app/main/default/objects/Sperm_Sample__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Analysis_Date_Time__c</columns>
    <columns>NAME</columns>
    <columns>Lab_Number__c</columns>
    <columns>Donor_Owner__c</columns>
    <columns>Frozen__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_Straws_Remaining__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>