force-app/main/default/objects/Sperm_Sample__c/listViews/Known_Donor_Logbook.listView-meta.xml
<ListView>
    <fullName>Known_Donor_Logbook</fullName>
    <columns>Collection_Date_Time__c</columns>
    <columns>Analysis_Date_Time__c</columns>
    <columns>Lab_Number__c</columns>
    <columns>NAME</columns>
    <columns>Donor_Owner__c</columns>
    <columns>Birthday__c</columns>
    <columns>Reserved_For__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Storage_Type__c</field>
        <operation>equals</operation>
        <value>Known Donor</value>
    </filters>
    <label>Known Donor Logbook</label>
</ListView>