force-app/main/default/objects/Sperm_Sample__c/listViews/Transport_Report_for_external_Clinics.listView-meta.xml
<ListView>
    <fullName>Transport_Report_for_external_Clinics</fullName>
    <columns>NAME</columns>
    <columns>Donor_Owner__c</columns>
    <columns>Reserved_For__c</columns>
    <columns>Post_Thaw_Total_Motile_Count__c</columns>
    <columns>Storage_Date__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Donor_Owner__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Number_of_Straws_Remaining__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Transport Report for external Clinics</label>
</ListView>